    The command option now accepts the values no|yes|msec|usec|nsec,
    where yes is a synonym of msec.  When giving the value nsec, the
    system cpu time of system calls is also recorded.

* Massif:

* Memcheck:

  - Several memcheck options are now dynamically changeable.
    Use  valgrind --help-dyn-options  to list them.

* ==================== OTHER CHANGES ====================

* New and modified GDB server monitor features:

  - Option -T tells vgdb to output a timestamp in the vgdb information messages.

  - The gdbserver monitor commands that require an address and an optional
    length argument now accepts the alternate 'C like' syntax "address[length]".
    For example, the memcheck command "monitor who_points_at 0x12345678 120"
    can now also be given as "monitor who_points_at 0x12345678[120]".

* ==================== FIXED BUGS ====================

The following bugs have been fixed or resolved.  Note that "n-i-bz"
stands for "not in bugzilla" -- that is, a bug that was reported to us
but never got a bugzilla entry.  We encourage you to file bugs in
bugzilla (https://bugs.kde.org/enter_bug.cgi?product=valgrind) rather
than mailing the developers (or mailing lists) directly -- bugs that
are not entered into bugzilla tend to get forgotten about or ignored.

To see details of a given bug, visit
  https://bugs.kde.org/show_bug.cgi?id=XXXXXX
where XXXXXX is the bug number as listed below.

385386  Assertion failed "szB >= CACHE_ENTRY_SIZE" at m_debuginfo/image.c:517
400162  Patch: Guard against __GLIBC_PREREQ for musl libc
400593  In Coregrind, use statx for some internal syscalls if [f]stat[64] fail
400872  Add nanoMIPS support to Valgrind
403212  drd/tests/trylock hangs on FreeBSD
404406  s390x: z14 miscellaneous instructions not implemented
405201  Incorrect size of struct vki_siginfo on 64-bit Linux architectures
406561  mcinfcallWSRU gdbserver_test fails on ppc64
406824  Unsupported baseline
407218  Add support for the copy_file_range syscall