@@ -56,6 +56,12 @@ support for X86/macOS 10.13, AMD64/macOS 10.13 and nanoMIPS/Linux.
   - Several memcheck options are now dynamically changeable.
     Use  valgrind --help-dyn-options  to list them.
 
+  - The release 3.15 introduced a backward incompatible change for
+    some suppression entries related to preadv and pwritev syscalls.
+    When reading a suppression entry using the unsupported 3.14 format,
+    valgrind will now produce a warning to say the suppression entry will not
+    work, and suggest the needed change.
+
 * ==================== OTHER CHANGES ====================
 
 * New and modified GDB server monitor features:
@@ -123,6 +129,9 @@ where XXXXXX is the bug number as listed below.
 416464  Fix false reports for uninitialized memory for PR_CAPBSET_READ/DROP
 416667  gcc10 ppc64le impossible constraint in 'asm' in test_isa.
 416753  new 32bit time syscalls for 2038+
+417075  pwritev(vector[...]) suppression ignored
+        417075 is not fixed, but incompatible supp entries are detected
+        and a warning is produced for these.
 417187  [MIPS] Conditional branch problem since 'grail' changes
 417238  Test memcheck/tests/vbit-test fails on mips64 BE
 417266  Make memcheck/tests/linux/sigqueue usable with musl
